Enable change compiler compliance quick-fixes
- add new ChangeToRequiredCompilerCompliance class based on
  JDT UI version
- modify ReorgCorrectionsSubProcessor to add new methods to change
  the compiler compliance using ChangeToRequiredCompilerCompliance
- enable quick-fixes in QuickFixProcessor for fixing compliance level
  and remove older commented out proposals pertaining to 1.8 or below
- modify BaseDiagnosticsHandler.toDiagnosticArray() to save arguments
  for problems requiring a compliance change
- change CodeActionHander.getCodeActionFromProposal() to handle
  ChangeToRequiredCompilerCompliance proposals that do not actually
  change the code
- add new tests to ReorgQuickFixTest